Fix: Chat is now 100% on mobile

--- a/week3/assets/css/style.css
+++ b/week3/assets/css/style.css
@@ -547,6 +547,15 @@ header li ul a {
   margin-top: .3em;
 }
 
+@media screen and (max-width: 25em) {
+  .chat {
+    width: 100%;
+  }
+  .chat ol {
+    width: 100%;
+  }
+}
+
 /* Rating
 ---------------------------------------------------- */
 .rating {
